--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1810,6 +1810,24 @@ pre[class*=language-] {
   border-radius: 0.65rem;
 }
 
+.resources {
+  margin-block-start: 3rem;
+}
+.resources > * {
+  margin-block-end: 0;
+  margin-block-start: 0;
+}
+.resources > * + * {
+  margin-block-start: 1rem;
+}
+.resources li::marker {
+  color: var(--adam-base-color-heading);
+}
+
+.edit-on-github {
+  margin-block-start: 3rem;
+}
+
 .form-group-list > * {
   margin-block-end: 0;
   margin-block-start: 0;
