--- a/src/scss/components/_navigation.scss
+++ b/src/scss/components/_navigation.scss
@@ -37,7 +37,7 @@
       color: color('primary');
     }
 
-    &[aria-current="page"] {
+    &[aria-current='page'] {
       color: color('primary');
       font-weight: 700;
     }
