--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -1,7 +1,5 @@
-{% set lang = locale if locale else 'en' %}
-
 <!DOCTYPE html>
-<html lang="{{ lang }}">
+<html lang="{{ locale if locale else 'en' }}">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
